# moto

./: Cargo.toml  bump.moto  bump.ps1  im.moto  install.moto  readme.md
.github/workflows/: release.yml
examples/: sample_script_1.moto  sample_script_2.moto  sample_script_3.moto  sample_script_4.moto  sample_script_5.moto
expirements/: parameters.moto  rusty.moto
logo/macos/: AppIcon.icns
src/: ast.rs  ctx.rs  lib.rs  main.rs  menu.rs  models.rs  parser.rs  progress.rs  runtime.rs
workspace/: _.dart  _.js  _.py  _.rs
