[package]
name = "moto"
version = "0.1.8"
edition = "2021"
authors = ["incredimo <a@xo.rs>"]
description = "moto - motivated automation"
license = "MIT"
repository = "https://github.com/zemorepo/moto"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
derive_more = "0.99.17"
dirs = "5.0.1"
futures = "0.3.28"
kdam = { version = "0.5.1", features = ["spinner", "gradient", "template"] }
lazy_static = "1.4.0"
nom = "7.1.3"
once_cell = "1.18.0"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
minimo =   "0.3.25"
textwrap = "0.16.1"
glob = "0.3.1"
crossterm = "0.27.0"
tui = "0.19.0"
ratatui = "0.26.1"
chrono = "0.4.34"
md5 = "0.7.0"
uuid = { version = "1.7.0", features = ["v4"] }








